fase_2/aulas/5_Servidores_Web_e_Balanceamento_de_Carga/hands_on/servidores-web-balanceamento/3-kubernetes-ingress-controller/hands-on-03-parte1-ingress-kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meu-app-web-deployment
  labels:
    app: meu-app-web
spec:
  replicas: 2 # Duas réplicas do Pod para demonstração de balanceamento
  selector:
    matchLabels:
      app: meu-app-web
  template:
    metadata:
      labels:
        app: meu-app-web
    spec:
      containers:
      - name: meu-app-web
        image: nginx:alpine # Usaremos uma imagem simples do Nginx
        ports:
        - containerPort: 80
