fase_2/aulas/5_Servidores_Web_e_Balanceamento_de_Carga/hands_on/servidores-web-balanceamento/3-kubernetes-ingress-controller/hands-on-03-parte1-ingress-kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meu-app-web-service
spec:
  selector:
    app: meu-app-web
  ports:
    - protocol: TCP
      port: 80 # Porta que o Service expõe
      targetPort: 80 # Porta que o container escuta
  type: ClusterIP # Tipo de Service: acessível apenas dentro do cluster
